fixed addTask button on mobile

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -84,6 +84,6 @@
 
 @media screen and (max-width: 580px) {
 	.sidebar-open > button {
-		display: none;
+		display: none !important;
 	}
 }
